Update to Spring 3
WIP